--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "phpunit/phpunit": "^5.6.1"
   },
   "require": {
-    "php": "^5.6 || ^7.0",
-    "zendframework/zend-config": "^3.1"
+    "php": "^5.6 || ^7.0"
   },
   "autoload": {
     "psr-4": {
